--- a/locations/index.html
+++ b/locations/index.html
@@ -546,7 +546,23 @@
 
         <!-- Introduction -->
         <div class="service-areas-intro">
-          <p>We provide comprehensive cleaning solutions throughout Massachusetts. Select a service below to see all the cities where we offer that specific cleaning service, then click your city for local pricing and availability.</p>
+          <h2 style="font-size: 1.75rem; color: #1a1a2e; margin-bottom: 1.5rem;">Your Trusted Massachusetts Cleaning Partner</h2>
+          <p>For over 21 years, Dory's Cleaning Services has been the trusted choice for families and businesses throughout Central and Eastern Massachusetts. From Worcester to the MetroWest area, from Newton to Framingham, we've built our reputation on reliability, attention to detail, and genuine care for every space we clean.</p>
+
+          <p style="margin-top: 1rem;">Our service area spans more than 100 communities across Middlesex, Worcester, and Norfolk counties. Whether you're a busy professional in Wellesley needing regular housekeeping, a property manager in Marlborough preparing for new tenants, or an office manager in Cambridge requiring daily janitorial services, we have the expertise and flexibility to meet your needs.</p>
+
+          <p style="margin-top: 1rem;">What sets us apart is our commitment to using eco-friendly, hospital-grade cleaning products that are safe for your family, pets, and the environment. Every member of our team is fully insured (up to $2 million in coverage), background-checked, and trained in our proprietary cleaning methods that ensure consistent, thorough results every time.</p>
+
+          <h3 style="font-size: 1.25rem; color: #1a1a2e; margin: 2rem 0 1rem;">Our Service Coverage Areas</h3>
+          <p>We proudly serve the Greater Boston area, the MetroWest corridor, and communities throughout Worcester County. Our most popular service areas include:</p>
+          <ul style="text-align: left; max-width: 600px; margin: 1rem auto; list-style: none; padding: 0;">
+            <li style="padding: 0.5rem 0; border-bottom: 1px solid #e2e8f0;"><strong>MetroWest:</strong> Framingham, Natick, Wellesley, Newton, Marlborough, Hudson, Sudbury</li>
+            <li style="padding: 0.5rem 0; border-bottom: 1px solid #e2e8f0;"><strong>Worcester Area:</strong> Worcester, Shrewsbury, Westborough, Northborough, Grafton</li>
+            <li style="padding: 0.5rem 0; border-bottom: 1px solid #e2e8f0;"><strong>Greater Boston:</strong> Cambridge, Brookline, Arlington, Lexington, Waltham</li>
+            <li style="padding: 0.5rem 0;"><strong>495 Corridor:</strong> Hopkinton, Milford, Franklin, Holliston, Ashland</li>
+          </ul>
+
+          <p style="margin-top: 1rem;">Select a service below to find professional cleaning in your city. Each location page includes local pricing, availability, customer testimonials from your neighbors, and a simple online quote request form. We offer free estimates for all new customers, and most homes can be scheduled within 48 hours.</p>
         </div>
 
         <!-- Deep Cleaning Service Block -->
