--- a/services/index.html
+++ b/services/index.html
@@ -215,11 +215,11 @@
                 <svg class="header__dropdown-icon" viewBox="0 0 24 24" fill="currentColor" width="16" height="16"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>
               </a>
               <ul class="header__dropdown">
-                <li><a href="janitorial-service/index.html">Janitorial Service</a></li>
-                <li><a href="deep-cleaning/index.html">Deep Cleaning</a></li>
-                <li><a href="upholstery-cleaning/index.html">Upholstery Cleaning</a></li>
-                <li><a href="carpet-cleaning/index.html">Carpet Cleaning</a></li>
-                <li><a href="general-housekeeping/index.html">General Housekeeping</a></li>
+                <li><a href="/services/janitorial-service">Janitorial Service</a></li>
+                <li><a href="/services/deep-cleaning">Deep Cleaning</a></li>
+                <li><a href="/services/upholstery-cleaning">Upholstery Cleaning</a></li>
+                <li><a href="/services/carpet-cleaning">Carpet Cleaning</a></li>
+                <li><a href="/services/general-housekeeping">General Housekeeping</a></li>
               </ul>
             </li>
             <li class="header__menu-item header__menu-item--dropdown">
@@ -270,11 +270,11 @@
         <li class="mobile-menu__item--has-children">
           <a href="/" class="active">Services</a>
           <ul class="mobile-menu__submenu">
-            <li><a href="janitorial-service/index.html">Janitorial Service</a></li>
-            <li><a href="deep-cleaning/index.html">Deep Cleaning</a></li>
-            <li><a href="upholstery-cleaning/index.html">Upholstery Cleaning</a></li>
-            <li><a href="carpet-cleaning/index.html">Carpet Cleaning</a></li>
-            <li><a href="general-housekeeping/index.html">General Housekeeping</a></li>
+            <li><a href="/services/janitorial-service">Janitorial Service</a></li>
+            <li><a href="/services/deep-cleaning">Deep Cleaning</a></li>
+            <li><a href="/services/upholstery-cleaning">Upholstery Cleaning</a></li>
+            <li><a href="/services/carpet-cleaning">Carpet Cleaning</a></li>
+            <li><a href="/services/general-housekeeping">General Housekeeping</a></li>
           </ul>
         </li>
         <li><a href="/locations">Service Areas</a></li>
@@ -335,7 +335,7 @@
             <div class="service-card__image">
               <img src="../assets/images/services/janitorial-service.jpg" alt="Professional Janitorial Service in Massachusetts" loading="lazy">
               <div class="service-card__overlay">
-                <a href="janitorial-service/index.html" class="service-card__link" aria-label="Learn more about Janitorial Service"></a>
+                <a href="/services/janitorial-service" class="service-card__link" aria-label="Learn more about Janitorial Service"></a>
               </div>
             </div>
             <div class="service-card__content">
@@ -350,7 +350,7 @@
                 <li>Retail Spaces & Showrooms</li>
                 <li>Flexible Scheduling Options</li>
               </ul>
-              <a href="janitorial-service/index.html" class="btn btn--primary">
+              <a href="/services/janitorial-service" class="btn btn--primary">
                 Learn More
                 <svg viewBox="0 0 24 24" fill="currentColor" width="18" height="18"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
               </a>
@@ -362,7 +362,7 @@
             <div class="service-card__image">
               <img src="../assets/images/services/deep-cleaning.jpg" alt="Deep Cleaning Service in Massachusetts" loading="lazy">
               <div class="service-card__overlay">
-                <a href="deep-cleaning/index.html" class="service-card__link" aria-label="Learn more about Deep Cleaning"></a>
+                <a href="/services/deep-cleaning" class="service-card__link" aria-label="Learn more about Deep Cleaning"></a>
               </div>
             </div>
             <div class="service-card__content">
@@ -377,7 +377,7 @@
                 <li>Seasonal Deep Cleans</li>
                 <li>Sanitization & Disinfection</li>
               </ul>
-              <a href="deep-cleaning/index.html" class="btn btn--primary">
+              <a href="/services/deep-cleaning" class="btn btn--primary">
                 Learn More
                 <svg viewBox="0 0 24 24" fill="currentColor" width="18" height="18"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
               </a>
@@ -389,7 +389,7 @@
             <div class="service-card__image">
               <img src="../assets/images/services/carpet-cleaning.jpg" alt="Carpet Cleaning Service in Massachusetts" loading="lazy">
               <div class="service-card__overlay">
-                <a href="carpet-cleaning/index.html" class="service-card__link" aria-label="Learn more about Carpet Cleaning"></a>
+                <a href="/services/carpet-cleaning" class="service-card__link" aria-label="Learn more about Carpet Cleaning"></a>
               </div>
             </div>
             <div class="service-card__content">
@@ -404,7 +404,7 @@
                 <li>Odor Elimination</li>
                 <li>Allergen Reduction</li>
               </ul>
-              <a href="carpet-cleaning/index.html" class="btn btn--primary">
+              <a href="/services/carpet-cleaning" class="btn btn--primary">
                 Learn More
                 <svg viewBox="0 0 24 24" fill="currentColor" width="18" height="18"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
               </a>
@@ -416,7 +416,7 @@
             <div class="service-card__image">
               <img src="../assets/images/services/upholstery-cleaning.jpg" alt="Upholstery Cleaning Service in Massachusetts" loading="lazy">
               <div class="service-card__overlay">
-                <a href="upholstery-cleaning/index.html" class="service-card__link" aria-label="Learn more about Upholstery Cleaning"></a>
+                <a href="/services/upholstery-cleaning" class="service-card__link" aria-label="Learn more about Upholstery Cleaning"></a>
               </div>
             </div>
             <div class="service-card__content">
@@ -431,7 +431,7 @@
                 <li>Dining Chairs</li>
                 <li>Fabric Protection</li>
               </ul>
-              <a href="upholstery-cleaning/index.html" class="btn btn--primary">
+              <a href="/services/upholstery-cleaning" class="btn btn--primary">
                 Learn More
                 <svg viewBox="0 0 24 24" fill="currentColor" width="18" height="18"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
               </a>
@@ -443,7 +443,7 @@
             <div class="service-card__image">
               <img src="../assets/images/services/general-housekeeping.jpg" alt="General Housekeeping Service in Massachusetts" loading="lazy">
               <div class="service-card__overlay">
-                <a href="general-housekeeping/index.html" class="service-card__link" aria-label="Learn more about General Housekeeping"></a>
+                <a href="/services/general-housekeeping" class="service-card__link" aria-label="Learn more about General Housekeeping"></a>
               </div>
             </div>
             <div class="service-card__content">
@@ -458,7 +458,7 @@
                 <li>Dusting & Vacuuming</li>
                 <li>Laundry & Organization</li>
               </ul>
-              <a href="general-housekeeping/index.html" class="btn btn--primary">
+              <a href="/services/general-housekeeping" class="btn btn--primary">
                 Learn More
                 <svg viewBox="0 0 24 24" fill="currentColor" width="18" height="18"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
               </a>
